# FreshViewer

./: README.md
src/: Doxyfile  Makefile  test
src/Controllers/: controller.cc  controller.h  scene_controller.h
src/GTest/: test.cc
src/Interfaces/: innterface_file_reader.h
src/Models/: affine_transformations.h  edge.h  facade.h  figure.h  file_reader.h  model_scene.h  point3d.h  scene.h  t  t.cpp  transform_matrix.h  vertex.h
src/Models/Matrix/: arith_logic.cc  core.cc  help_functions.cc  matrix.h  operators.cc
src/QtSceneDrawer/: CMakeLists.txt  main.cc  qtscenedrawer.cc  qtscenedrawer.h  qtscenedrawer.ui
src/Views/: CMakeLists.txt  main.cc  sceneopenglwidget.cc  sceneopenglwidget.h  view.cc  view.h  view.ui  viewopenglscene.cc  viewopenglscene.h
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  QtSceneDrawer  build.ninja  cmake_install.cmake
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-5252e8de373d94c018d0.json  cmakeFiles-v1-52f6bcb5bd8f2721e86f.json  codemodel-v2-f630773f20b908ff07ad.json  directory-.-Debug-0e249f2b78dd33fb9ae1.json  index-2024-02-29T11-41-26-0542.json  target-QtSceneDrawer-Debug-d386a8f04001e17e3ce5.json  target-QtSceneDrawer_autogen_timestamp_deps-Debug-14339ee49f4beb46b977.json
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-0baff007277a5358aec3.json  directory-.-Debug-d03422e34eb9421b2d7e.json  index-2024-02-29T11-40-47-0350.json  target-QtSceneDrawer-Debug-87cd42f0625822eda0bf.json  target-QtSceneDrawer_autogen-Debug-8e14130e0b7ca6acb6e2.json
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QFileDialog.4230E7865DDD0C34.idx  QImage.1B2CA8555F1A205A.idx  QList.A3DD13B4F7544E9F.idx  QMargins.682C86764D04D4CE.idx  QMatrix3x3.CF63641D0BF2B76F.idx  QMatrix4x4.815D83397805B673.idx  QMenu.4141AE787944E9BA.idx  QObject.BE734FA52C51A472.idx  QOpenGLContext.04EC8CBA8BBDC52A.idx  QOpenGLWidget.73F26D5D7DA41A2C.idx  QPaintDeviceWindow.86B6D17D47A73955.idx  QScopedPointer.B5BCCDE1C70C656C.idx  QSharedDataPointer.81431A43BF44188D.idx  QString.8F58F9E31CC0DEA8.idx  QtOpenGL.B3B210B847CF514E.idx  QtOpenGLDepends.EF8177292ECAEAE1.idx  QtOpenGLWidgets.5DD0030038B2E1DF.idx  QtOpenGLWidgetsDepends.CDB9942FE7F38B0B.idx  affine_transformations.h.43C668863AFF8E16.idx  basic_ios.h.80C6E45AB0922292.idx  codecvt.h.B9482FA0295E18F8.idx  edge.h.14F7CFE77FB4BAB8.idx  figure.h.90D1A7CD0C722051.idx  file_reader.h.30E025E53FAF1E4A.idx  fs_path.h.5FEDEF543494F756.idx  fstream.58A03CC7CFEF7AD3.idx  fstream.tcc.D0EC90BCE73C1EC6.idx  future.AF5AFE13602CE802.idx  istream.EB625AB4C93A7FE5.idx  locale_facets.h.E9F0321C6647D6B7.idx  main.cc.94661095C6A479DC.idx  main.cpp.0E9417E959018B52.idx  matrix.h.63965BB77D6A153C.idx  model_scene.h.8D8800D3953C819E.idx  ostream.531583231456CED7.idx  point3d.h.DDBDE63578A93A58.idx  q20algorithm.h.524768F4DC77E6AD.idx  q20iterator.h.953062A2949A42A1.idx  qapplicationstatic.h.AA907B9DCB19A5D8.idx  qcache.h.75F82823D0415364.idx  (+87 more)
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/QtSceneDrawer_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/QtSceneDrawer_autogen/EWIEGA46WW/: moc_qtscenedrawer.cpp  moc_qtscenedrawer.cpp.d
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/QtSceneDrawer_autogen/PTREKU4BTT/: moc_sceneopenglwidget.cpp  moc_sceneopenglwidget.cpp.d
src/build-QtSceneDrawer-Desktop_Qt_6_6_2_GCC_64bit-Debug/QtSceneDrawer_autogen/include/: ui_qtscenedrawer.h
